# chess_engine_c

./: .gitignore  Makefile  README.md  compile_flags.txt
include/: board.h  borad.h  cross_sleep.h  eval.h  icons.h  main.h  memory.h  move_gen.h  moves.h  nn_model.h  piece_square.h  pieces.h  tests.h  types.h
neural_net/: .gitignore  README.md  main.py  pyproject.toml  test.py
neural_net/app/: encoding.py  gen_data.py  model.py  training.py
src/: board.c  encoding.c  eval.c  main.c  memory.c  move_gen.c  moves.c  nn_model.cpp  piece_sqaure.c  pieces.c
tests/: test_alpha_beta.c  test_array.c  test_board.c  test_checkmate.c  test_moves.c  test_nn.c  tests.c
