[project]
name = "neural-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "ipython>=9.6.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "stockfish>=3.28.0",
    "torch>=2.8.0",
]
